--- a/src/options/index.html
+++ b/src/options/index.html
@@ -14,7 +14,8 @@
         <label class="field">
             <div class="label">Provider</div>
             <select id="provider">
-                <option value="google">Gemini</option>
+                <option value="google">Google Gemini</option>
+                <option value="openai">OpenAI GPT</option>
             </select>
         </label>
 
@@ -36,7 +37,7 @@
         <label class="field">
             <div class="label">Font Size (번역 텍스트 크기)</div>
             <div class="input-with-unit">
-                <input id="contentFontSize" type="number" min="10" max="30" />
+                <input id="contentFontSize" type="number" min="5" max="100" />
                 <span class="unit" aria-hidden="true">px</span>
             </div>
         </label>
